--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,51 @@ html {
   height: 100%;
 }
 body {
-  background: -webkit-linear-gradient(#ebece7, white);
-  background: linear-gradient(#ebece7, white);
   margin: 0;
   width: 100%;
   height: 100%;
   font-family: 'Raleway', sans-serif;
 }
+img:hover {
+  animation: shake 0.5s;
+
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
 .container {
+  width: 99vw;
+  background: -webkit-linear-gradient(#ebece7, white);
+  background: linear-gradient(#ebece7, white);
   position: absolute;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 50%;
+  top: 50vw;
 }
 .title {
   font-weight: 800;
   color: transparent;
-  font-size: 35vmin;
+  font-size: 20vw;
   background: url("https://i.imgur.com/0Vu9QPN.png") repeat;
   background-position: 40% 50%;
   -webkit-background-clip: text;
   position: relative;
   text-align: center;
-  line-height: 30vmin;
+  line-height: 15vw;
   letter-spacing: -8px;
 }
 .subtitle {
@@ -37,4 +57,18 @@ body {
   text-transform: uppercase;
   padding-top: 10px;
   font-size: 30px;
+}
+.why {
+  display: none;
+  font-size: 50px;
+}
+
+@media (pointer:none), (pointer:coarse) {
+  .why {
+    display: block;
+  }
+
+  .container {
+    display: none;
+  }
 }
